--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3130,7 +3130,7 @@
     section.hero_area {
         background-size: cover;
         background-position: left;
-        height: 600px;
+        height: auto;
         padding-top: 100px;
         border-radius: 0;
     }
@@ -3146,10 +3146,22 @@
     }
     .hero_btn {
         margin-bottom: 10px;
+        margin-right: 0;
     }
     .hero-thumb {
+        display: block;
+        position: relative;
+    }
+
+    .hero_content{
+        text-align: center;
+        padding: 15px 0 0 0;
+    }
+
+    .hero_content h1:before{
         display: none;
     }
+
     .hero-thumb img {
         width: 100%;
     }
