--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -1,9 +1,12 @@
 /*
 
- font-family: "Rajdhani", sans-serif;
- font-family: "Nunito", sans-serif;
+font-family: "RB Nylo Test";
+font-family: "RB Nylo Test ExtraLight";
+font-family: "RB Nylo Test Medium";
+font-family: "RB Nylo Test ExtraBold";
+font-family: "RB Nylo Test Heavy";
 */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap');
+
 
 html,
 body {
@@ -16,15 +19,15 @@ body {
     color: #6b7a7a;
     font-weight: 400;
     text-align: left;
-    font-family: "Fira Sans";
+    font-family: "RB Nylo Test ExtraLight";
 }
 
 p {
     font-size: 16px;
     line-height: 26px;
-    color: #6b7a7a;
+    color: #000;
     font-weight: 400;
-    font-family: "Fira Sans";
+    font-family: "RB Nylo Test ExtraLight";
     transition: 0.5s;
 }
 
@@ -35,7 +38,7 @@ h4,
 h5,
 h6 {
     color: #063232;
-    font-family: "Fira Sans";
+    font-family: "RB Nylo Test Medium";
     font-style: normal;
     margin-bottom: 0;
     margin-top: 11px;
