--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -37,7 +37,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #112a46;
+    color: #0e4747;
     font-family: "RB Nylo Test Medium";
     font-style: normal;
     margin-bottom: 0;
