--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -202,7 +202,8 @@
         padding: 40px 12px 30px 25px;
     }
     .feature_shape {
-        right: 9%;
+        right: 0;
+        top: 40px;
     }
     .service_content {
         padding: 34px 25px 27px;
@@ -441,7 +442,7 @@
         width: 100%;
     }
     section.about_area.style_four .about_play.style_three {
-        right: 7%;
+        right: 0;
     }
     /* ====== Start Home Six Css==== */
 
@@ -589,6 +590,7 @@
         line-height: 58px;
         font-weight: 600;
     }
+
     .hero-thumb img {
         width: 100%;
     }
@@ -3140,6 +3142,12 @@
         font-size: 41px;
         line-height: 48px;
     }
+    .hero_content h1 span{
+        overflow: hidden;
+        width: 52%;
+        display: block;
+        margin: auto;
+    }
     .hero_content p {
         width: 100%;
     }
@@ -3597,7 +3605,7 @@ section.case-study-area {
     }
     .call-do-action-info {
         display: flex;
-        margin: 0 !important;
+        margin: 0 0 30px 0 !important;
         padding: 0 !important;
     }
     .call-do-social_icon {
@@ -3694,7 +3702,7 @@ section.case-study-area {
     }
     section.why_choose_us {
         background-position: right;
-        padding: 80px 0 110px;
+        padding: 30px 0 20px;
     }
     .choose_thumb {
         margin-left: 0;
