--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ a.active_sticky {
 .sticky {
     left: 0;
     margin: auto;
-    position: fixed !important;
+    position: absolute;
     top: 0;
     width: 100%;
     -webkit-box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.1);
@@ -6741,7 +6741,7 @@ button.close-search i {
     top: 0;
     width: 50%;
     height: 100%;
-    background: rgba(0, 0, 0, 100);
+    background: #0E4747;
     z-index: 2;
   }
 
@@ -7226,7 +7226,7 @@ button.close-search i {
     top: 0;
 }
 
-.sidebar_blog.NewClassBlog{
+.sucribe.NewClassBlog{
     position: fixed;
     transform: translateY(100px);
     width: 368px;
@@ -7389,4 +7389,20 @@ button.close-search i {
 }
 .list_point_desc li i{
     color: green;
+}
+.block_whatsapp {
+    position: fixed;
+    z-index: 9;
+    background: #0da94b;
+    width: 50px;
+    height: 50px;
+    left: 15px;
+    bottom: 15px;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50px;
+}
+.block_whatsapp a {
+    color: #fff;
+    font-size: 22px;
 }
